--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1,6 +1,6 @@
 @import 'utilities/variables'
 @import 'base/reset'
 @import 'components/seccion'
-@import 'components/video'
-@import 'components/scrollbar'
+@import 'components/carrusel'
 @import 'layout/encabezado'
+@import 'layout/pie'
