--- a/src/assets/sass/layout/_encabezado.sass
+++ b/src/assets/sass/layout/_encabezado.sass
@@ -1,10 +1,13 @@
 .encabezado
-    width: 100%  
+    width: 100%
     min-height: $XL
-    display: flex    
+    display: flex
+    align-items: center
     position: fixed
     top: 0
-    left: 0    
+    left: 0
+    background: $color_oscuro_primario
+    z-index: 99
 
     &__nav
         height: 100%
@@ -13,7 +16,6 @@
         flex-direction: row
         justify-content: flex-end
         justify-items: center
-        z-index: 2
 
         &__listado
             height: 100%
@@ -30,11 +32,13 @@
 
             &__item
                 font-family: $fuente_secundaria
-                color: $color_claro_primario   
-                font-size: $S         
+                color: $color_claro_primario
+                font-size: $S
 
                 &__enlace
-                    color: $color_claro_primario   
+                    color: $color_claro_primario
 
-                    &:hover
+                    &--activo
                         color: $color_primario
+                    &:hover
+                        opacity: $opacidad
