--- a/src/assets/sass/utilities/_variables.sass
+++ b/src/assets/sass/utilities/_variables.sass
@@ -1,6 +1,6 @@
 //Importación de las fuentes de google
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap')
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap')
 
 //Contiene las distintas variables que se usaran en los distintos estilos
     
@@ -8,12 +8,12 @@
 $color_primario: #F0131E
 $color_primario-hover: #9F0013
 $color_claro_primario: #FFFFFF
-$color_claro-secundario: #e7e7e7
+$color_claro-secundario: #d2d2d2
 $color_oscuro_primario: #101010
 $color_oscuro_secundario: #2E2E2E
 
 /* -------------- FUENTES -------------- */
-$fuente_primaria: 'Roboto Condensed', sans-serif
+$fuente_primaria: 'Anton', sans-serif
 $fuente_secundaria: 'Roboto', sans-serif
 
 
